--- a/WindowsGameFramework7th.vcxproj.filters
+++ b/WindowsGameFramework7th.vcxproj.filters
@@ -109,6 +109,9 @@
     <Filter Include="WindowsGameFramework\9_Utilities\Math">
       <UniqueIdentifier>{7bc8d5f2-6d7f-4d42-a4c9-cc2cea722cd8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="WindowsGameFramework\9_Utilities\Random">
+      <UniqueIdentifier>{1ab040fd-436a-48d4-9b24-87aa2bd5be68}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\csv\ApplicationData\windowData.csv">
@@ -206,6 +209,9 @@
     <ClInclude Include="Framework\Utilities\Math\Math.h">
       <Filter>WindowsGameFramework\9_Utilities\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Framework\Utilities\Random\Random.h">
+      <Filter>WindowsGameFramework\9_Utilities\Random</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\BaseSystem\Private\MainWindow\MainWindowSystem.cpp">
@@ -270,6 +276,9 @@
     </ClCompile>
     <ClCompile Include="Framework\GameObjectClasses\2D\FadeSprite.cpp">
       <Filter>WindowsGameFramework\2_GameObjectClasses\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\Utilities\Random\Random.cpp">
+      <Filter>WindowsGameFramework\9_Utilities\Random</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
