--- a/WindowsGameFramework7th.vcxproj
+++ b/WindowsGameFramework7th.vcxproj
@@ -162,6 +162,21 @@
     <ClInclude Include="Framework\BaseSystem\Private\Input\XInputControllerData.h" />
     <ClInclude Include="Framework\BaseSystem\Private\MainWindow\MainWindowNS.h" />
     <ClInclude Include="Framework\BaseSystem\Private\MainWindow\MainWindowSystem.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\DX11Device\DeviceContext.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\DX11Device\DX11Device.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\DX11Include\DX11IncludeHeader.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\RenderSystem.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\ShaderResource\ShaderResouce.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\ShaderResource\Texture\RenderTarget\RenderTarget.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\ShaderResource\Texture\Texture.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\ClearPass.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\DrawQueue.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\RenderFlow.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\RenderPass.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\Utilities\File\File.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\Utilities\Interface\IStaticNameObjectList.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\Utilities\NameObject\NameObject.h" />
+    <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\Utilities\XML\Xml.h" />
     <ClInclude Include="Framework\BaseSystem\Private\Scene\LoadScene.h" />
     <ClInclude Include="Framework\BaseSystem\Private\Scene\SceneManager.h" />
     <ClInclude Include="Framework\BaseSystem\Private\Timer\TimerSystem.h" />
@@ -189,6 +204,16 @@
     <ClCompile Include="Framework\BaseSystem\Private\DebugSystem\ConsoleWindow.cpp" />
     <ClCompile Include="Framework\BaseSystem\Private\Input\InputSystem.cpp" />
     <ClCompile Include="Framework\BaseSystem\Private\MainWindow\MainWindowSystem.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\DX11Device\DeviceContext.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\DX11Device\DX11Device.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\RenderSystem.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\ShaderResource\Texture\RenderTarget\RenderTarget.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\ClearPass.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\DrawQueue.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\RenderFlow.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\SystemResource\RenderPass.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\Utilities\File\File.cpp" />
+    <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\Utilities\XML\Xml.cpp" />
     <ClCompile Include="Framework\BaseSystem\Private\Scene\LoadScene.cpp" />
     <ClCompile Include="Framework\BaseSystem\Private\Scene\SceneManager.cpp" />
     <ClCompile Include="Framework\BaseSystem\Private\Timer\TimerSystem.cpp" />
